After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699104 - when nothing is selected, Add to Bookmarks is enabled but does nothing
when nothing is selected, Add to Bookmarks is enabled but does nothing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.8.x
Other Linux
: Normal minor
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2013-04-28 09:27 UTC by Adam Dingle
Modified: 2013-05-13 02:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adam Dingle 2013-04-28 09:27:19 UTC
To see the problem:

1. In the file chooser, visit any directory that has just a couple of files.
2. If a file is selected, Ctrl+click it to deselect it so that nothing is now selected.
3. Right click in the empty area after the file list.

In the context menu, Add to Bookmarks will be enabled, but choosing it does nothing.  In this situation either the menu item should be disabled or it should actually do something (i.e. add the enclosing folder as a bookmark).